fix initial time

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <body>
     <h1>You are being redirected to google store in
-        <em id='time'>1
+        <em id='time'>
 </em>. Please install the application to continue.</h1>
 </body>
 <script>
